# GMusicApi-cpp

./: LICENSE
src/: CMakeLists.txt
